<resources>
    <string name="app_name">FinalProject448</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="go_to_credentials">Go to Credentials</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Welcome_to_your_Password_Manager">Welcome to your Password Manager</string>
    <string name="service">Service</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="save_credentials">Save Credentials</string>
    <string name="generate_a_random_password_for_me">Generate a random password for me</string>
</resources>
